--- a/sidepanel/sidepanel.html
+++ b/sidepanel/sidepanel.html
@@ -27,21 +27,21 @@
                 </button>
             </div>
             <div class="room-info">
-                <span class="room-label">Room:</span>
-                <span id="roomUrl" class="room-url">Connecting...</span>
+                <span class="room-label" data-i18n="room">Room:</span>
+                <span id="roomUrl" class="room-url" data-i18n="connecting">Connecting...</span>
             </div>
         </header>
 
         <!-- Connection Status -->
         <div id="statusBar" class="status-bar status-connecting">
             <span class="status-dot"></span>
-            <span id="statusText">Connecting...</span>
+            <span id="statusText" data-i18n="connecting">Connecting...</span>
         </div>
 
         <!-- User List -->
         <div class="users-section">
             <div class="section-header">
-                <span>Online</span>
+                <span data-i18n="online">Online</span>
                 <span id="userCount" class="user-count">0</span>
             </div>
             <div id="userList" class="user-list">
@@ -55,8 +55,8 @@
                 <!-- Messages will be added here -->
                 <div class="empty-state" id="emptyState">
                     <span class="empty-icon">💬</span>
-                    <p>No messages yet</p>
-                    <p class="empty-hint">Be the first to say hello!</p>
+                    <p data-i18n="noMessages">No messages yet</p>
+                    <p class="empty-hint" data-i18n="firstToHello">Be the first to say hello!</p>
                 </div>
             </div>
         </div>
@@ -79,9 +79,9 @@
     <div id="modal" class="modal hidden">
         <div class="modal-content">
             <div id="modalIcon" class="modal-icon">⚠️</div>
-            <h3 id="modalTitle">Error</h3>
-            <p id="modalMessage">Something went wrong</p>
-            <button id="modalBtn" class="modal-btn">OK</button>
+            <h3 id="modalTitle" data-i18n="error">Error</h3>
+            <p id="modalMessage" data-i18n="somethingWrong">Something went wrong</p>
+            <button id="modalBtn" class="modal-btn" data-i18n="ok">OK</button>
         </div>
     </div>
 
